testsuite/tests/grammar/invalid_synthetic_parser/transform.lkt
grammar foo_grammar {
    @main_rule main_rule <- Example("example" SynthExample())
}
